ensure that images never overflow their container
This will prevent images from ever overflowing their parent container.

(From cfpb/regulations-site#784)

--- a/regulations/static/regulations/css/scss/_layout.scss
+++ b/regulations/static/regulations/css/scss/_layout.scss
@@ -8,6 +8,10 @@
   width: 100%;
 }
 
+img {
+  max-width: 100%;
+}
+
 .main-content {
   background: $white;
   margin-top: $mainhead_height + $subhead_height + 4px;
